<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <AutoCompleteTextView
        android:id="@+id/txtSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_hint_input_school" />

    <EditText
        android:id="@+id/txtParentCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_hint_input_code"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/txtRelation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_hint_input_relation"
        android:inputType="text"
        android:maxLines="1" />
    
    <Button
        android:id="@+id/btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_button_ok" android:background="?android:attr/selectableItemBackground" android:textColor="#2233FF"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/info" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView"
            android:paddingLeft="10dp"
            android:text="@string/code_info_message"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>